# ticketing-in-c

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  noHeaderMakefile  oldMakefile  ticketing-in-c.kdev4  ticketing.kdev4
.github/workflows/: cmake.yml
infra/: ticketing.deployment.yml  ticketing.pod.yml  ticketing.service.yml
public/: index.html
public/aux/: theme-switcher.js
public/default/: login.js
public/tickets/: create.js  edit.js  index.html  index.js  main.js  show.js
src/: context.c  context.h  main.c
src/api/: route.c  route.h
src/aux/: auth.c  auth.h  content_negotiation.c  content_negotiation.h  loader.c  loader.h
src/aux/middleware/: auth.c  auth.h
src/data/: data_access.h  db_support.c  db_support.h  tickets.c  tickets.h  users.c  users.h
src/data/ticket/: ticket.c  ticket.h
src/data/user/: user.c  user.h
src/site/controller/: default_controller.c  default_controller.h  tickets_controller.c  tickets_controller.h
src/site/default/: route.c  route.h
src/site/render/: layout.c  layout.h  script.c  script.h
src/static/: route.c  route.h
view/: 404.html  500.html  layout.html  main.html
view/ticket/: index.html  main.js
